<resources>
    <string name="app_name">ProjetoCompartilhamentoVagasDispMoveis</string>
    <string name="register_insert_name">Insira o primeiro nome</string>
    <string name="register">Register</string>
    <string name="insira_o_e_mail">Insira o e-mail</string>
    <string name="insira_o_sobrenome">Insira o sobrenome</string>
    <string name="title_activity_location_test">LocationTestActivity</string>
    <string name="username">Insira o nome de usuário.</string>
    <string name="escolha_sua_senha">Escolha sua senha</string>
    <string name="rua">Rua</string>
    <string name="bairro">Bairro</string>
    <string name="cidade">cidade</string>
    <string name="estado">estado</string>
    <string name="is_suggest_address_correct">O endereço abaixo está correto?</string>
    <string name="procurar_calcada_livre">Procurar calçada livre</string>
    <string name="sucess_response_insert_address">Sucesso! Calçada adicionada.</string>
    <string name="error_response_insert_address">Não adicionou calçada com sucesso :(</string>
    <string name="postcode">CEP</string>
    <string name="type_adddress_number">Digite o número de sua casa.</string>
    <string name="register_address">Cadastrar endereço.</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="title_activity_maps">Map</string>
    <string name="usernameLogin">Usuário</string>
    <string name="passwordLogin">Senha</string>
    <string name="login">Login</string>
    <string name="not_registered">Não sou registrado</string>
    <string name="success_login">Login efetuado com sucesso!</string>
    <string name="message_field_not_empty">Campo não pode ser vazio.</string>
    <string name="distance_label">Distância: </string>
    <string name="time_label">Tempo</string>
    <string name="go_to_pkg_location">Ir para esta calçada</string>
    <string name="place_details">
    <![CDATA[
        <b>%1$s</b>
        <br/>
        <i>Place Id: %2$s</i>
        <br/>
        Address: %3$s
        <br/>
        Phone: %4$s
        <br/>
        Website: %5$s
    ]]>
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plate">Placa</string>
    <string name="model">Modelo</string>
    <string name="register_car">Registrar</string>
    <string name="plateNumbers">plate_numbers</string>
    <string name="plate_letters">Letras da placa</string>
    <string name="add_car">Adicionar Automóvel</string>
    <string name="plate_numbers">Números da placa</string>
</resources>
