<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_guess_parking_location"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="0dp"
android:paddingLeft="0dp"
android:paddingRight="0dp"
android:paddingTop="0dp"
tools:context="com.example.andreperictavares.projetocompartilhamentovagasdispmoveis.Activities.GuessParkingLocationActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/is_suggest_address_correct"
        android:id="@+id/right_address_question"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rua"
        android:id="@+id/rua" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bairro"
        android:id="@+id/bairro" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cidade"
        android:id="@+id/cidade" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/estado"
        android:id="@+id/estado" />


    <TextView
        android:text="@string/postcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/postcode" />


    <ProgressBar
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar" />

    <Button
        android:text="@string/yes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="goToInsertHouserNumberActivity"
        android:id="@+id/button4" />

    <Button
        android:text="@string/no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="skipThisActivity"
        android:id="@+id/button5" />

</LinearLayout>
