<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:background="@drawable/back"
    tools:context="com.example.andreperictavares.projetocompartilhamentovagasdispmoveis.RegisterActivity"
    android:weightSum="1">

    <TextView
        android:text="Para acessar a plataforma é necessário cadastrar-se."
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:textColor="#D3D3D3"
        android:textSize="16sp"
        android:fontFamily="sans-serif"
        android:textStyle="normal|bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:paddingTop="50dp"
        android:id="@+id/textViewUsername"
        android:textColor="#D3D3D3" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtUsername" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/escolha_sua_senha"
        android:id="@+id/textViewPasword"
        android:textColor="#D3D3D3" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtPassword"
        android:inputType="textPassword" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_insert_name"
        android:id="@+id/textView2"
        android:textColor="#D3D3D3" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtName" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insira_o_sobrenome"
        android:id="@+id/textView4"
        android:textColor="#D3D3D3" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtSobrenome" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insira_o_e_mail"
        android:id="@+id/textView3"
        android:textColor="#D3D3D3" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtEmail" />

    <Button
        android:layout_width="282dp"
        android:layout_height="wrap_content"
        android:text="Registrar"
        android:id="@+id/btnRegister"
        android:onClick="register"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="50dp"
        android:background="@drawable/gradiente"
        android:textColor="#D3D3D3" />

</LinearLayout>
